--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,7 +1,7 @@
 ---
 title: "GSS challange"
-author: "Put your name here!"
-date: "put the date here"
+author: "Kelly Patrizio!"
+date: "October 8,2020"
 output: html_document
 ---
 
@@ -18,6 +18,10 @@ GSS <-read.csv(file="GSScsv.csv",header=TRUE)
 
 Is belief in the bigbang theory (BIGBANG) independent of belief in an afterlife (POSTLIFE)?
 
+$H_0$ The Null Hypothesis is that there is no relationship   belief in the (BIGBANG) theory and belief in the afterlife (POSTLIFE).  
+
+$H_A$  The Alternative Hypothesis is that there is relationship between belief in the (BIGBANG) theory and belief in the afterlife (POSTLIFE).  
+
 # Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method. Discuss what data manipulations may be needed for example subsetting or other binning procedures and what sort of graphical displays and inferential tools will be used!-->
@@ -32,13 +36,33 @@ Is belief in the bigbang theory (BIGBANG) independent of belief in an afterlife 
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming or departing to what is expected by your null hypothesis !-->
 
+```{r}
+barchartGC(~BIGBANG + POSTLIFE,data=GSS)
+barchartGC(~BIGBANG + POSTLIFE,data=GSS, type="percent")
+
+```
+
+
 ### Numerical Descriptive Results
 
+
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+
+```{r}
+table1 <- xtabs(~BIGBANG + POSTLIFE, data=GSS)
+rowPerc(table1)
+colPerc(table1)
+```
 
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
 
 
 # Discussion and Conclusion
