--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -18,9 +18,9 @@ GSS <-read.csv(file="GSScsv.csv",header=TRUE)
 
 Is belief in the bigbang theory (BIGBANG) independent of belief in an afterlife (POSTLIFE)?
 
-$H_0$ The Null Hypothesis is that there is no relationship   belief in the (BIGBANG) theory and belief in the afterlife (POSTLIFE).  
+$H_0$ The Null Hypothesis is that there is no relationship between the belief in the (BIGBANG) theory and belief in the afterlife (POSTLIFE).  
 
-$H_A$  The Alternative Hypothesis is that there is relationship between belief in the (BIGBANG) theory and belief in the afterlife (POSTLIFE).  
+$H_A$  The Alternative Hypothesis is that there is a relationship between belief in the (BIGBANG) theory and belief in the afterlife (POSTLIFE).  
 
 # Methods
 
@@ -42,6 +42,7 @@ barchartGC(~BIGBANG + POSTLIFE,data=GSS, type="percent")
 
 ```
 
+In the above Bar Plot we see that approx. 8%  who do not believe in the BIGBANG Theory do not believe in POSTLIFE, and approx. 91% who do not believe in the BIGBANG Theory do believe in POSTLIFE.  We also can see that approx. 18% of those who do believe in the BIGBANG Theory do not believe in POSTLIFE, and that approx. 81% of those who do believe in the BIGBANG Theory do believe in POSTLIFE.  
 
 ### Numerical Descriptive Results
 
@@ -54,6 +55,8 @@ rowPerc(table1)
 colPerc(table1)
 ```
 
+In the above Numerical Cross-tab Graph above, we can see that out of 100 polled who don't believe in the BIGBANG Theory, 8% do not believe in POSTLIFE, and 18% of those who do believe in the BIGBANG Theory 82% believe in POSTLIFE.  In the second table, we can see that out of 100 who do not believe in a POSTLIFE, 35% do not believe in the BIGBANG Theory, and 57% who do believe in a POSTLIFE, 43% do believe in the BIGBANG Theory.  This does not appear to show a significant difference.
+
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
@@ -64,7 +67,10 @@ chisqtestGC(table1)
 fisher.test(table1)
 ```
 
+Lastly to get an even clearer analysis, we ran a Fisher's Exact Test for Count Data above, that shows a p-value of more than 0.05 at 0.07143 which tells us that it is possible that there could be a relationship between the belief of the BIGBANG Theory and the belief in POSTLIFE.  
 
 # Discussion and Conclusion
 
-<!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+<!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variables causes the other, or whether they perhaps are related for some other reason.  Watch the chapter 6 videos from the George Town videos collection.!-->
+
+In conclusion we fail to reject the Null Hypothesis due to lack of evidence to show a relationship between the two beliefs, BIGBANG Theory and POSTLIFE!
